# maelstrom-core-old

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
bam-collect-doc/: Cargo.toml
bam-collect-doc/src/: agg.rs  main.rs  reference.rs
bam-collect-doc/src/tests/data/: Makefile  ex.expected.coverage.vcf  ex.expected.fragments.vcf  ex.sam  ex.sorted.bam  ex.sorted.bam.bai
bam-collect-pesr/: Cargo.toml
bam-collect-pesr/src/: main.rs
bam-collect-pesr/src/tests/data/: Makefile  ex-pe-hard-leading.expected.tsv  ex-pe-hard-leading.sam  ex-pe-hard-leading.sorted.bam  ex-pe-hard-leading.sorted.bam.bai  ex-pe-hard-trailing.expected.tsv  ex-pe-hard-trailing.sam  ex-pe-hard-trailing.sorted.bam  ex-pe-hard-trailing.sorted.bam.bai  ex-pe-orient.expected.tsv  ex-pe-orient.sam  ex-pe-orient.sorted.bam  ex-pe-orient.sorted.bam.bai  ex-pe-soft-neg.expected.tsv  ex-pe-soft-neg.sam  ex-pe-soft-neg.sorted.bam  ex-pe-soft-neg.sorted.bam.bai  ex-pe-soft-pos.expected.tsv  ex-pe-soft-pos.sam  ex-pe-soft-pos.sorted.bam  ex-pe-soft-pos.sorted.bam.bai  ex-pe-tid.expected.tsv  ex-pe-tid.sam  ex-pe-tid.sorted.bam  ex-pe-tid.sorted.bam.bai  ex-pe-tlen.expected.tsv  ex-pe-tlen.sam  ex-pe-tlen.sorted.bam  ex-pe-tlen.sorted.bam.bai
bam-scan/: Cargo.toml
bam-scan/src/: main.rs
bam-scan/src/tests/data/: ex-blocked.bed  ex-pe-hard-leading.sam  ex-pe-soft-neg.sorted.bam  ex-pe-soft-pos.expected.sam  ex-pe-tid.expected-blocked.sam  ex-pe-tid.sorted.bam
bam-unique/: Cargo.toml
bam-unique/src/: main.rs
bam-unique/src/tests/data/: Makefile  ex-duplicates.bam  ex-duplicates.expected.sam  ex-duplicates.sam  ex-duplicates2.expected.sam  ex-duplicates2.sam
clusvcf/: Cargo.toml
clusvcf/src/: main.rs
clusvcf/src/tests/data/: Makefile  ex-delly-1.vcf  ex-delly-1.vcf.gz.tbi
lib-common/: Cargo.toml
lib-common/src/: bam.rs  bcf.rs  doc.rs  error.rs  lib.rs  read_evidence.rs  stats.rs  sv.rs
lib-common/src/bam/: library.rs
lib-common/src/tests/data/: ex-delly-1.vcf
lib-config/: Cargo.toml
lib-config/src/: lib.rs
scanbam/: Cargo.toml
scanbam/src/: main.rs
scanbam/src/tests/data/: ex-pe-hard-leading.expected.sam  ex-pe-hard-trailing.sorted.bam  ex-pe-orient.sam  ex-pe-tid.expected.sam  ex-pe-tlen.sorted.bam  ex-pe-tlen.sorted.bam.bai
scripts/: sort-bed
src/: scanbam.rs
src/tests/scanbam/: ex-pe-hard-trailing.expected.sam  ex-pe-hard-trailing.sam  ex-pe-hard-trailing.sorted.bam.bai  ex-pe-orient.expected.sam  ex-pe-orient.sorted.bam  ex-pe-soft-neg.expected.sam  ex-pe-soft-neg.sam  ex-pe-soft-pos.sam  ex-pe-soft-pos.sorted.bam.bai  ex-pe-tid.sam  ex-pe-tid.sorted.bam.bai  ex-pe-tlen.expected.sam  ex-pe-tlen.sam
stdvcf/: Cargo.toml
stdvcf/src/: main.rs
stdvcf/src/tests/data/: ex-delly-filter.expected.vcf  ex-delly-filter.vcf  ex-delly-nofilter.expected.vcf
uniqbam/: Cargo.toml
uniqbam/src/: main.rs
uniqbam/src/tests/data/: ex-duplicates.expected.sam  ex-duplicates2.bam
vcf-annotate/: Cargo.toml
vcf-annotate/src/: main.rs
vcf-annotate/src/tests/data/: Makefile  ex-delly-blocked.bed  ex-delly-doc.vcf  ex-delly-doc.vcf.gz.tbi  ex-delly-pesr.tsv  ex-delly-pesr.tsv.gz.tbi  ex-delly-snvs.vcf  ex-delly-snvs.vcf.gz.tbi  ex-delly-svs.vcf  ex-delly-svs.vcf.gz.tbi  ex-delly.expected-blocked.doc.tsv  ex-delly.expected-blocked.pe.tsv  ex-delly.expected-blocked.sr.tsv  ex-delly.expected-blocked.vcf  ex-delly.expected.pe.tsv  ex-delly.expected.snvs.tsv  ex-delly.expected.sr.tsv  ex-delly.expected.vcf
vcf-cluster/: Cargo.toml
vcf-cluster/src/: main.rs
vcf-cluster/src/tests/data/: Makefile  ex-cnmops-1.vcf  ex-cnmops-1.vcf.gz.tbi  ex-cnmops-2.vcf  ex-cnmops-2.vcf.gz.tbi  ex-cnmops.expected.vcf  ex-delly-1.vcf.gz.tbi  ex-delly-2.vcf  ex-delly-2.vcf.gz.tbi  ex-delly.expected.vcf
vcf-standardize/: Cargo.toml
vcf-standardize/src/: main.rs
vcf-standardize/src/tests/data/: Makefile  ex-cnmops-filter.expected.vcf  ex-cnmops-nofilter.expected.vcf  ex-cnmops-nofilter.vcf  ex-cnmops-nofilter.vcf.gz.tbi  ex-delly-filter.expected.vcf  ex-delly-filter.vcf  ex-delly-filter.vcf.gz.tbi  ex-delly-nofilter.expected.vcf  ex-delly-nofilter.vcf.gz.tbi  ex-manta-filter.expected.vcf  (+3 more)
