[package]
name = "snappysv"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]
edition = "2018"

[dependencies]
bio = "*"
bio-types = "*"
rust-htslib = "*"
log = "*"
rocksdb = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.6"

[[bin]]
name = "snappysv-extract"
path = "src/extract.rs"