[package]
name = "snappysv"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]
edition = "2018"

[dependencies]
bio = "*"
bio-types = "*"
rust-htslib = "*"
git-version = "0.3.4"
log = "0.4"
fern = "0.5"
rocksdb = "*"
clap = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.6"
thiserror = "*"

[[bin]]
name = "snappysv-scanbam"
path = "src/scanbam.rs"