[package]
name = "lib-common"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]
edition = "2018"

[dependencies]
bio-types = "0.7"
regex = "1"
rust-htslib = { git = "https://github.com/holtgrewe/rust-htslib.git", branch = "bcf-fixes" }
thiserror = "1"
log = "0.4"
lib-config = { path = "../lib-config" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
matches = "0.1"
pretty_assertions = "0.6"
tempdir = "0.3"
