[package]
name = "maelstrom-vcf-annotate"
version = "0.1.0"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bihealth.de>"]
edition = "2018"

[dependencies]
bio-types = "0.7"
bio = "0.32"
indicatif = "0.15"
itertools = "0.9"
rust-htslib = { git = "https://github.com/holtgrewe/rust-htslib.git", branch = "bcf-fixes2" }
git-version = "0.3"
log = "0.4"
fern = "0.5"
chrono = "0.4"
clap = "2.33"
lib-common = { path = "../lib-common" }
lib-config = { path = "../lib-config" }
thiserror = "1"
toml = "0.5"

[dev-dependencies]
pretty_assertions = "0.6"
tempdir = "0.3"
